# saco

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  saco-config.cmake.in
bench/: CMakeLists.txt  bench.cpp  nanobench.cpp
include/saco/: saco.h  shared_ptr.h  xcore.h  xsize_dispatcher.h  xutility.h
test/: CMakeLists.txt  _common.h  _poison_std_types_in_global_namespace.h  compile_test_poisoned_std_types.cpp  compile_test_saco_h.cpp  compile_test_shared_ptr_h.cpp  test_align.cpp  test_general.cpp  test_mctx.cpp  test_size_dispatcher.cpp
